@@ -5,13 +5,12 @@ import backend.helpers.Point;
 import backend.helpers.Square;
 
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.Map;
 
 public final class ImmutableBoard extends Board {
 
     ImmutableBoard(Map<Point, Square> board, Map<Point, Piece> pieces, Point max) {
-        super(Collections.unmodifiableMap(board), max, Collections.unmodifiableMap(pieces));
+        super(Map.copyOf(board), max, Map.copyOf(pieces));
     }
 
     @Override
